fixed navbar responsive issue on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -235,7 +235,7 @@ footer{
     .nav-container{
         padding: 0;
         justify-content: space-between;
-        gap: 20px;
+        gap: 15px;
         margin: 0;
     }
     .nav-item{
@@ -246,7 +246,7 @@ footer{
     font-size: 1rem;
     }
     .cart{
-    font-size: 1.5rem;
+    font-size: 1rem;
     }
     .hero-img{
         max-width: 80%;
